--- a/index.html
+++ b/index.html
@@ -16,9 +16,14 @@
             <i class="fas fa-th-large"></i>
             <span class="btn-text">Snap</span>
           </button>
+          <button class="grid-snap ui-btn">
+              <i class="fas fa-vector-square"></i>
+              <span class="btn-text">Wall</span>
+            </button>
         </div>
         <div class="builder-view">
-          <canvas width="2000" height="2000" id="canvas"></canvas>
+          <canvas width="2000" height="2000" class="grid"></canvas>
+          <canvas width="2000" height="2000" class="canvas"></canvas>
         </div>
       </div>
       
