switches to react

--- a/index.html
+++ b/index.html
@@ -2,30 +2,30 @@
 <html>
     <head>
         <title>Retro3d Builder</title>
-        <link rel="stylesheet" type="text/css" href="dist/main.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     </head>
     <body>
-      <div class="builder-wrapper">
+      <div class="app"></div>
+      <!-- <div class="builder-wrapper">
         <div class="builder-controls">
-          <button class="move ui-btn">
+          <label class="move-btn ui-btn" data-tool="move">
             <i class="fas fa-arrows-alt"></i>
             <span class="btn-text">Move</span>
-          </button>
-          <button class="grid-snap ui-btn">
+          </label>
+          <label class="grid-snap-btn ui-btn" data-tool="snap">
             <i class="fas fa-th-large"></i>
             <span class="btn-text">Snap</span>
-          </button>
-          <button class="grid-snap ui-btn">
-              <i class="fas fa-vector-square"></i>
-              <span class="btn-text">Wall</span>
-            </button>
+          </label>
+          <label class="wall-btn ui-btn" data-tool="wall">
+            <i class="fas fa-vector-square"></i>
+            <span class="btn-text">Wall</span>
+          </label>
         </div>
         <div class="builder-view">
           <canvas width="2000" height="2000" class="grid"></canvas>
           <canvas width="2000" height="2000" class="canvas"></canvas>
         </div>
-      </div>
+      </div> -->
       
       <script src="dist/bundle.js"></script>
     </body>
